# orfos

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  README.md
disk/: CMakeLists.txt  make_disk.cpp
kernel/: CMakeLists.txt  linker.ld
kernel/arch/: config.h  riscv.cpp  riscv.h  riscv_macros.h
kernel/boot/: entry.S  main.cpp  main.h  start.cpp
kernel/console/: console.cpp  console.h  uart.cpp  uart.h
kernel/driver/: device_tree.cpp  device_tree.h  device_tree_loader.cpp  device_tree_loader.h  driver_type.h  init.cpp  init.h
kernel/driver/memory/: device.cpp  device.h
kernel/driver/uart/: device.cpp  device.h
kernel/elf/: elf.h  exec.cpp  exec.h
kernel/fs/: block.cpp  block.h  buffer.cpp  buffer.h  device.cpp  device.h  file.cpp  file.h  fs.cpp  fs.h  inode.cpp  inode.h  log.cpp  log.h  stat.h  super_block.cpp  super_block.h  virtio.cpp  virtio.h
kernel/ie/: cause.cpp  cause.h  clint.cpp  clint.h  ie.cpp  ie.h  kernel_trap.cpp  kernel_vector.S  kernel_vector.h  plic.cpp  plic.h  timer.cpp  timer.h  timer_vector.h  user_trap.cpp  user_trap.h  user_vector.S  user_vector.h
kernel/lib/: align.h  assert.cpp  endian.h  fixed_string.h  format.h  hash_map.h  hash_set.h  new.cpp  panic.cpp  panic.h  queue.h  result.h  stdexcept.cpp  string.cpp  string.h  string_view.h
kernel/lib/libc/: bits.cpp  bits.h  stdlib.cpp  stdlib.h  string.cpp  string.h
kernel/memory/: copy.cpp  copy.h  kvm.cpp  kvm.h  page.cpp  page.h  page_table.cpp  page_table.h  pte.cpp  pte.h  uvm.cpp  uvm.h  va.cpp  va.h
kernel/mutex/: lock_guard.h  sleep_mutex.cpp  sleep_mutex.h  spin_mutex.cpp  spin_mutex.h
kernel/process/: context.S  context.cpp  context.h  cpu.cpp  cpu.h  init.S  process.cpp  process.h  scheduler.cpp  scheduler.h  sleep.cpp  sleep.h  trap_frame.h  user_init_proc.cpp  user_init_proc.h
kernel/syscall/: args.cpp  args.h  close.cpp  close.h  exec.cpp  exec.h  exit.cpp  exit.h  fork.cpp  fork.h  mknod.cpp  mknod.h  open.cpp  open.h  read.cpp  read.h  syscall.cpp  syscall.h  syscall_key.h  wait.cpp  wait.h  write.cpp  write.h
script/: debug.sh  run.sh
user/: CMakeLists.txt  linker.ld
user/echo/: CMakeLists.txt  main.cpp
user/init/: CMakeLists.txt  main.cpp
user/lib/: CMakeLists.txt  file.cpp  file.h  stdio.cpp  stdio.h  string.cpp  string.h  syscall.S  syscall.cpp  syscall.h
user/sh/: CMakeLists.txt  main.cpp
